tests/pass/expr_stmt.jolt
fn main() void {
    1 + 2;
    ret;
}
