tests/fail/call_non_function.jolt
fn main() void {
    let x = 1;
    x();
}
